Intermediate upload for test - FEST FEVER

--- a/events/mordernschoolfest/index.html
+++ b/events/mordernschoolfest/index.html
@@ -37,6 +37,19 @@
 
         gtag('config', 'G-HYLCSMYVFK');
     </script>
+    <style>
+        .masthead .btn {
+            margin: 10px;
+        }
+        .exclusive {
+            width: 100%;
+            background-color: black;
+            font-size: 5vw !important;
+        }
+        .exclusive img {
+            width: 30%;
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -47,19 +60,19 @@
         <a class="menu-toggle rounded" href="#"><i class="icon-menu"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">A Bridge</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <li class="sidebar-nav-item"><a href="#programs">Programs</a></li>
-                <li class="sidebar-nav-item"><a href="#modules">Modules</a></li>
-                <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <li class="sidebar-brand"><a href="https://abridge.online/#page-top">A Bridge</a></li>
+                <li class="sidebar-nav-item"><a href="/#page-top">Home</a></li>
+                <li class="sidebar-nav-item"><a href="/#about">About</a></li>
+                <li class="sidebar-nav-item"><a href="/#programs">Programs</a></li>
+                <li class="sidebar-nav-item"><a href="/#modules">Modules</a></li>
+                <li class="sidebar-nav-item"><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
         <!-- Header-->
         <header class="masthead d-flex align-items-center"
-            style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url('images/modernschool.jpeg') no-repeat center center fixed; background-size: cover; color:aliceblue;   opacity: .85;">
+            style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url('images/modernschool.png') no-repeat center center fixed; background-size: cover; color:azure;   opacity: .85; background-color: black;">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">CONNECT</h1>
+                <h1 class="mb-1">CONNECT @ MODERN FEST</h1>
                 <h3 class="mb-5">
                     <div style="display: inline-block;">to know about</div>
                     <div id="container">
@@ -68,40 +81,36 @@
                     </div>
                     <div style="display: inline-block;">MAKE YOUR LIFE BETTER</div>
                 </h3>
-                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-            </div>
-        </header>
-        <!-- About-->
-        <section class="content-section bg-light" id="about">
-            <div class="container px-4 px-lg-5 text-center">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-10">
-                        <h2 class="mb-5">Bridging the Global Achievement Gap</h2>
-                        <p class="lead mb-5">
-                            We are living in interesting times, with artificial intelligence tools redefining many jobs,
-                            and robots taking over mundane tasks. In such times how do we ensure we are ready to embrace
-                            these changes? How do we prepare to handle these and even more disruptive innovations in the
-                            years ahead?
-                        </p>
-                        <p class="lead mb-5">
-                            Our mission is to equip students and professionals alike with the essential skills and
-                            knowledge necessary to thrive in today's dynamic world. We understand the importance of core
-                            competencies in shaping the foundation for success. Our team of experienced educators and
-                            industry professionals have carefully designed a range of training programs that cater to
-                            the unique needs of schools and corporations. We take pride in fostering an environment of
-                            growth, collaboration, and excellence.
-                        </p>
-                        <a class="btn btn-dark btn-xl" href="#modules">Our Workshops</a>
-                    </div>
+                <div>
+                    <a href="#funtime" class="btn btn-danger btn-lg align-middle" role="button">Let's have FUN</a>
+                    <a href="#onine" class="btn btn-success btn-lg align-middle" role="button">1st Online Course</a>
+                    <a href="/" class="btn btn-primary btn-lg align-middle" role="button">What is ABRIDGE</a>
                 </div>
             </div>
+        </header>
+        <!-- Call to Action-->
+        <section class="content-section text-black">
+            <div class="container px-4 px-lg-5 text-center">
+                <h2 class="mb-4">We are learning and growing. Want to engage with us...</h2>
+                <a class="btn btn-xl btn-success me-4" target="_blank"
+                    href="https://forms.gle/eRhY2Tk4m2hB8SpZ7">Enquire!</a>
+                <a class="btn btn-xl btn-primary" target="_blank" href="https://forms.gle/CEucBKDm6SJ9oT2XA">Join Us!</a>
+            </div>
         </section>
-        <!-- Services-->
-        <section class="content-section bg-primary text-white text-center" id="programs">
+        <!-- Online-->
+        <section class="content-section bg-primary text-white text-center" id="online">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0">Programs</h3>
-                    <h2 class="mb-5">What We Offer</h2>
+                    <h3 class="text-secondary mb-0 exclusive">
+                        <img src="images/exclusive.png" />
+                        Offer for the FEST
+                    </h3>
+                    <h2 class="mb-5">
+                        Bridge the Global Achievement Gap by augmenting your strengths with the ‘must-have’ skills of the future.
+                        <a href="https://wa.me/919315402822?text=I%20am%20interested%20to%20be%20FUTURE%20READY.%20How%20do%20I%20start%3F" >
+                            Express your interest here. Tell us why you Want
+                        </a>    
+                    </h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -127,19 +136,29 @@
                 </div>
             </div>
         </section>
-        <!-- Callout-->
-        <section class="callout">
+        <!-- Fun Time-->
+        <section class="content-section bg-light" id="funtime">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mx-auto mb-5">
-                    Welcome to
-                    <em>your</em>
-                    digital assistant!
-                </h2>
-                <a class="btn btn-primary btn-xl" href="#">Coming Soon!</a>
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-10">
+                        <h2 class="mb-5">Level Up Your Abilities</h2>
+                        <p class="lead mb-5">
+                            We are living in interesting times, with artificial intelligence tools redefining many jobs,
+                            and robots taking over mundane tasks. 
+                        </p>
+                        <p class="lead mb-5">
+                            <strong>
+                                Let's have fun and play to beat AI and show it what actual intelligene is!!!
+                                Come and Discover your Potential Through Play!
+                            </strong> 
+                        </p>
+                        <a class="btn btn-dark btn-xl" href="#games">🤔 WHAT GAMES and HOW PLAY 🙃</a>
+                    </div>
+                </div>
             </div>
         </section>
-        <!-- Portfolio-->
-        <section class="content-section" id="modules">
+        <!-- Games-->
+        <section class="content-section" id="games">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Modules</h3>
@@ -195,15 +214,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Call to Action-->
-        <section class="content-section bg-primary text-white">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">We are learning and growing. Want to engage with us...</h2>
-                <a class="btn btn-xl btn-light me-4" target="_blank"
-                    href="https://forms.gle/eRhY2Tk4m2hB8SpZ7">Enquire!</a>
-                <a class="btn btn-xl btn-dark" target="_blank" href="https://forms.gle/CEucBKDm6SJ9oT2XA">Join Us!</a>
             </div>
         </section>
         <!-- Map-->
