--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
         <a class="menu-toggle rounded" href="#"><i class="icon-menu"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">A Bridge</a></li>
+                <li class="sidebar-brand"><a href="https://abridge.online/#page-top">A Bridge</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
                 <li class="sidebar-nav-item"><a href="#programs">Programs</a></li>
                 <li class="sidebar-nav-item"><a href="#modules">Modules</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <hr />
+                <li class="sidebar-nav-item"><a href="/events/mordernschoolfest/">Modern School FEST<br />COME JOIN US</a></li>
             </ul>
         </nav>
         <!-- Header-->
