--- a/quiz1.html
+++ b/quiz1.html
@@ -38,8 +38,11 @@
         <canvas class="p-canvas-webgl" id="canvas-webgl"></canvas>
 
         <!-- start Quiz button -->
-        <div class="start_btn"><button id="start">Start Quiz</button></div>
-        <div class="start_btn"><button id="home">Goto Home</button></div>
+        <div class="start_btn">
+            <a id="start" href="#onine" class="btn btn-success btn-lg align-middle" role="button">ENTRY Questions for Online Course</a>
+            <a id="fest" href="#funtime" class="btn btn-danger btn-lg align-middle" role="button">Get back to the fun at the FEST</a>
+            <a id="home" href="/" class="btn btn-primary btn-lg align-middle" role="button">Find out more about ABRIDGE</a>
+        </div>
 
         <!-- Info Box -->
         <div class="info_box">
