--- a/events/mordernschoolfest/index.html
+++ b/events/mordernschoolfest/index.html
@@ -95,6 +95,10 @@
                 <a class="btn btn-xl btn-success me-4" target="_blank"
                     href="https://forms.gle/eRhY2Tk4m2hB8SpZ7">Enquire!</a>
                 <a class="btn btn-xl btn-primary" target="_blank" href="https://forms.gle/CEucBKDm6SJ9oT2XA">Join Us!</a>
+                <a class="btn btn-xl btn-danger" target="_blank" href="https://wa.me/919315402822?text=I%20am%20interested%20to%20be%20FUTURE%20READY.%20How%20do%20I%20start%3F" >
+                    Express your interest here. Tell us why you Want
+                </a>    
+
             </div>
         </section>
         <!-- Online-->
