More Changes - WhatsApp Links etc

--- a/events/mordernschoolfest/index.html
+++ b/events/mordernschoolfest/index.html
@@ -49,6 +49,9 @@
         .exclusive img {
             width: 30%;
         }
+        .content-section a {
+            margin: 5px;
+        }
     </style>
 </head>
 
@@ -83,7 +86,7 @@
                 </h3>
                 <div>
                     <a href="#funtime" class="btn btn-danger btn-lg align-middle" role="button">Let's have FUN</a>
-                    <a href="#onine" class="btn btn-success btn-lg align-middle" role="button">1st Online Course</a>
+                    <a href="#course" class="btn btn-success btn-lg align-middle" role="button">1st Online Course</a>
                     <a href="/" class="btn btn-primary btn-lg align-middle" role="button">What is ABRIDGE</a>
                 </div>
             </div>
@@ -96,13 +99,13 @@
                     href="https://forms.gle/eRhY2Tk4m2hB8SpZ7">Enquire!</a>
                 <a class="btn btn-xl btn-primary" target="_blank" href="https://forms.gle/CEucBKDm6SJ9oT2XA">Join Us!</a>
                 <a class="btn btn-xl btn-danger" target="_blank" href="https://wa.me/919315402822?text=I%20am%20interested%20to%20be%20FUTURE%20READY.%20How%20do%20I%20start%3F" >
-                    Express your interest here. Tell us why you Want
+                    <img style="width:10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/598px-WhatsApp_icon.png?20200503174721" />
+                    Express your interest here. Tell us what you are looking for!
                 </a>    
-
             </div>
         </section>
         <!-- Online-->
-        <section class="content-section bg-primary text-white text-center" id="online">
+        <section class="content-section bg-primary text-white text-center" id="course">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0 exclusive">
@@ -115,28 +118,6 @@
                             Express your interest here. Tell us why you Want
                         </a>    
                     </h2>
-                </div>
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-graduation"></i></span>
-                        <h4><strong>Academic Augmentation</strong></h4>
-                        <p class="text-faded mb-0">Enriching learning experience for students</p>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-puzzle"></i></span>
-                        <h4><strong>Engaging Workshops</strong></h4>
-                        <p class="text-faded mb-0">Empowering individuals with essential skills</p>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-directions""></i></span>
-                        <h4><strong>Skill Empowerment</strong></h4>
-                        <p class=" text-faded mb-0">Full-spectrum programs for core competency</p>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-rocket"></i></span>
-                        <h4><strong>Corporate Bootcamps</strong></h4>
-                        <p class="text-faded mb-0">Enhance employee innovation & potential</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -162,60 +143,52 @@
             </div>
         </section>
         <!-- Games-->
-        <section class="content-section" id="games">
+        <section class="content-section bg-primary text-white text-center" id="games">
             <div class="container px-4 px-lg-5">
-                <div class="content-section-heading text-center">
-                    <h3 class="text-secondary mb-0">Modules</h3>
-                    <h2 class="mb-5">Recent Workshops</h2>
-                </div>
-                <div class="row gx-0">
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Problem Solving</div>
-                                    <p class="mb-0">Unlock your potential - challenges become opportunities and
-                                        solutions come naturally.</p>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
-                        </a>
+                <div class="row gx-4 gx-lg-5">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-graduation"></i></span>
+                        <h4><strong>Nerf Gun</strong></h4>
+                        <p class="text-faded mb-0">
+                            Enriching learning experience for students
+                            <a class="btn btn-xl btn-danger" target="_blank" href="https://wa.me/919315402822?text=I%20want%20to%20Play%20NERF%20GUN.%20Register%20me." >
+                                <img style="width:10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/598px-WhatsApp_icon.png?20200503174721" />
+                                Register to Play
+                            </a>  
+                        </p>
                     </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Art of Communication</div>
-                                    <p class="mb-0">Experience a revolution that builds empathy and increases self
-                                        awareness.</p>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
-                        </a>
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-puzzle"></i></span>
+                        <h4><strong>Bail the Ball</strong></h4>
+                        <p class="text-faded mb-0">
+                            Empowering individuals with essential skills
+                            <a class="btn btn-xl btn-danger" target="_blank" href="https://wa.me/919315402822?text=I%20want%20to%20Play%20Bail%20the%20Ball.%20Register%20me." >
+                                <img style="width:10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/598px-WhatsApp_icon.png?20200503174721" />
+                                Register to Play
+                            </a>  
+                        </p>
                     </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Entrepreneurship</div>
-                                    <p class="mb-0">Step into a realm of possibilities, guiding you towards excellence
-                                        and accomplishment.</p>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
-                        </a>
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-directions""></i></span>
+                        <h4><strong>Karaoke</strong></h4>
+                        <p class=" text-faded mb-0">
+                            Full-spectrum programs for core competency
+                            <a class="btn btn-xl btn-danger" target="_blank" href="https://wa.me/919315402822?text=I%20want%20to%20Have%20fun%20with%20Karaoke.%20Register%20me." >
+                                <img style="width:10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/598px-WhatsApp_icon.png?20200503174721" />
+                                Register to Play
+                            </a>  
+                        </p>
                     </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Financial Literacy</div>
-                                    <p class="mb-0">Empowerment to gain essential insights and skills to navigate the
-                                        intricacies.</p>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
-                        </a>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-rocket"></i></span>
+                        <h4><strong>Brain Games</strong></h4>
+                        <p class="text-faded mb-0">
+                            Enhance employee innovation & potential
+                            <a class="btn btn-xl btn-danger" target="_blank" href="https://wa.me/919315402822?text=I%20want%20to%20Play%20Brain%20Development%20Games.%20Register%20me." >
+                                <img style="width:10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/598px-WhatsApp_icon.png?20200503174721" />
+                                Register to Play
+                            </a>  
+                        </p>
                     </div>
                 </div>
             </div>
