adding component thanks for appling

--- a/about-internship.html
+++ b/about-internship.html
@@ -15,6 +15,7 @@
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700;900&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/about-internship.css" rel="stylesheet">
@@ -380,6 +381,7 @@
         
 
         <!-- FORM -->
+         <div id="formContainer">
         <form id="internForm" class="space-y-6">
 
         <!-- Name -->
@@ -572,10 +574,10 @@
 
           <!-- Submit Button -->
 <!-- Submit Button -->
-<div class="pt-4 relative submit-wrapper">
+<div class="pt-4 relative submit-wrapper text-center">
   <button type="submit"
           id="submitBtn"
-          class="submit-btn w-full md:w-auto px-10 py-4 rounded-full 
+          class="submit-btn w-[420] md:w-full px-15 py-5 rounded-full 
                  bg-black text-white text-base font-semibold 
                  shadow-lg transition-all duration-300 relative overflow-hidden">
     ✨ Submit Application
@@ -589,13 +591,25 @@
 </div>
 
 
-    
+</div>
 
     </div>
   
 </div>
 </div> <!-- container -->
 </section>
+<div id="thankYouMessage" class="hidden thankyou-wrapper">
+  <div class="thankyou-card">
+    <h2 class="thankyou-title">🎉 Thank You!</h2>
+    <p class="thankyou-text">
+      Thanks for filling out the form.<br>
+      We will get back to you very soon.
+    </p>
+  </div>
+</div>
+
+
+
   <!-- JS -->
  <script>
 document.addEventListener("DOMContentLoaded", function () {
@@ -607,6 +621,18 @@ document.addEventListener("DOMContentLoaded", function () {
 
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
+    // 🔥 Auto-focus first invalid field
+const firstInvalid = form.querySelector(":invalid");
+
+if (firstInvalid) {
+  firstInvalid.focus();
+  firstInvalid.scrollIntoView({
+    behavior: "smooth",
+    block: "center"
+  });
+  return; // stop submit until form is valid
+}
+
 
     // hide all errors
     document.querySelectorAll("#internForm .text-red-500")
@@ -673,12 +699,21 @@ document.addEventListener("DOMContentLoaded", function () {
 
       msg.classList.remove("hidden");
 
-      if (res.ok) {
-        msg.classList.remove("text-red-500");
-        msg.classList.add("text-green-600");
-        msg.textContent = "Your application has been submitted successfully!";
-        form.reset();
-      } else {
+   if (res.ok) {
+  // 🔥 Hide the ENTIRE form section
+  document.getElementById("internship-form-section").style.display = "none";
+
+  // ✅ Show thank you message only
+  const thankYou = document.getElementById("thankYouMessage");
+  thankYou.classList.remove("hidden");
+
+  // Optional smooth scroll
+  thankYou.scrollIntoView({ behavior: "smooth" });
+
+  form.reset();
+}
+
+ else {
         throw new Error();
       }
 
@@ -822,6 +857,7 @@ document.addEventListener("DOMContentLoaded", () => {
   btn.addEventListener("click", createSparkles);
 });
 </script>
+
 
 
 
