--- a/about-internship.html
+++ b/about-internship.html
@@ -602,8 +602,8 @@
   <div class="thankyou-card">
     <h2 class="thankyou-title">🎉 Thank You!</h2>
     <p class="thankyou-text">
-      Thanks for filling out the form.<br>
-      We will get back to you very soon.
+      Thank You we have accepted your request.<br>
+       We will connect with you shortly
     </p>
   </div>
 </div>
