--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="https://abridge.online/#page-top">A Bridge</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
+                <li class="sidebar-nav-item"><a href="internship.html">Internship</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
                 <li class="sidebar-nav-item"><a href="#programs">Programs</a></li>
                 <li class="sidebar-nav-item"><a href="#modules">Modules</a></li>
@@ -70,6 +71,7 @@
                     <div style="display: inline-block;">at a time...</div>
                 </h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                <a class="btn btn-dark btn-xl" href="internship.html">Join Internship</a>
             </div>
         </header>
         <!-- About-->
